# Quiz-app

quiz frontend/app/: layout.tsx
quiz-backend/: .env  _.backup  commands.txt  pyproject.toml
quiz-backend/quiz_backend/: route.py  setting.py
quiz-backend/quiz_backend/controllers/: auth_controllers.py  user_controllers.py
quiz-backend/quiz_backend/db/: db_connector.py
quiz-backend/quiz_backend/models/: admin_models.py  quiz_models.py  user_models.py
quiz-backend/quiz_backend/utils/: exception.py  imports.py  types.py
quiz-frontend/src/app/: layout.tsx  page.tsx
