[tool.poetry]
name = "quiz-backend"
version = "0.1.0"
description = ""
authors = ["SYED RAZA ALI <144608213+Syed-Raza-Ali@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
